# digital_test_to_verilog

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  verilog.rs
tests/: cli.rs  iverilog.rs  util-tests.rs
tests/data/: 74162.v  74162_scaffold.v  74162_tb.v  74181.v  74181_scaffold.v  74779.dig  74779.v  74779_scaffold.v  adder.dig  adder.v  adder_Simple_tb.v  adder_scaffold.v  adder_tb.v  test.dig
tests/util/: mod.rs
