[package]
name = "digital_test_to_verilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.1.0", features = ["fancy"] }
clap = { version = "4.5.4", features = ["derive"] }
digital_test_runner = { path = "../digital_test_runner" }
once_cell = "1.19.0"
regex = "1.10.4"

[dev-dependencies]
assert_cmd = { version = "2.0.14", features = ["color"] }
test-with = { version = "0.12.6", default-features = false, features = [
    "executable",
] }
rand = "0.8.5"
rstest = "0.21.0"
